# apulse

./: .gitignore  CMakeLists.txt  README.md
debian/: changelog  control  copyright  rules
man/: apulse.1
pkgconfig/: libpulse-mainloop-glib.pc.in  libpulse-simple.pc.in  libpulse.pc.in
src/: apulse-channel-map.c  apulse-common.c  apulse-context.c  apulse-ext.c  apulse-format-info.c  apulse-mainloop-glib.c  apulse-mainloop.c  apulse-misc.c  apulse-operation.c  apulse-proplist.c  apulse-signal.c  apulse-simple.c  apulse-stream.c  apulse-threaded-mainloop.c  apulse-volume.c  apulse.h  apulse.template  notimplemented.c  ringbuffer.c  ringbuffer.h  symbolmap  trace.c  trace.h  util.c  util.h
tests/: CMakeLists.txt  test_ringbuffer.c
